--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>service-demo</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>war</packaging>
 
     <properties>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
