--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,22 @@
                     <target>${java.target.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>1.6.1</version>
+                <configuration>
+                    <from>
+                        <image>openjdk:11-jdk-slim</image>
+                    </from>
+                    <container>
+                        <ports>
+                            <port>8080</port>
+                            <port>15370</port>
+                        </ports>
+                    </container>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
